// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Banner renders correctly with a button 1`] = `
<DocumentFragment>
  .cache-1voqd75-Container-styles {
  padding: 24px;
  border-radius: 8px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  gap: 16px;
  background: #f1eefc;
  background-image: url(test-file-stub);
  -webkit-background-position: right;
  background-position: right;
  background-repeat: no-repeat;
  -webkit-background-size: contain;
  background-size: contain;
}

.cache-1voqd75-Container-styles>svg:first-child,
.cache-1voqd75-Container-styles>img {
  height: 140px;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

.cache-1voqd75-Container-styles button[name='close'] {
  background: none;
}

.cache-1voqd75-Container-styles button[name='close']:hover {
  background: none;
}

.cache-msgflj-Stack-ImageStack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  width: 140px;
}

.cache-1i393eq-Stack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 16px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.cache-1r8thn3-Stack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 4px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.cache-1vmaihr-StyledText {
  color: #521094;
  font-size: 21px;
  font-family: Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 32px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-13w04ns-StyledText {
  color: #3f4250;
  font-size: 16px;
  font-family: Asap;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 24px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-nf3r0g-Stack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 16px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.cache-1wvru4m-StyledFilledButton {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 40px;
  padding: 0 12px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 8px;
  border-radius: 4px;
  box-sizing: border-box;
  width: auto;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline-offset: 2px;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 14px;
  font-family: Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 20px;
  paragraph-spacing: 0;
  text-case: none;
  background: #521094;
  border: none;
  color: #ffffff;
}

.cache-1wvru4m-StyledFilledButton:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-1wvru4m-StyledFilledButton:active {
  box-shadow: 0px 0px 0px 3px #5e127e40;
}

.cache-1wvru4m-StyledFilledButton:hover,
.cache-1wvru4m-StyledFilledButton:active {
  background: #3b1a61;
  color: #f9f9fa;
}

.cache-xnjxeq-StyledGhostButton {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 32px;
  padding: 0 8px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 8px;
  border-radius: 4px;
  box-sizing: border-box;
  width: 32px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline-offset: 2px;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 14px;
  font-family: Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 20px;
  paragraph-spacing: 0;
  text-case: none;
  background: none;
  border: none;
  color: #3f4250;
}

.cache-xnjxeq-StyledGhostButton:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-xnjxeq-StyledGhostButton:active {
  box-shadow: 0px 0px 0px 3px #151A2D5C;
}

.cache-xnjxeq-StyledGhostButton:hover,
.cache-xnjxeq-StyledGhostButton:active {
  background: #e9eaeb;
  color: #222638;
}

.cache-kbjega-StyledIcon-sizeStyles {
  vertical-align: middle;
  fill: currentColor;
  height: 16px;
  width: 16px;
  min-width: 16px;
  min-height: 16px;
}

<div
    class="cache-1voqd75-Container-styles e1kdwp5x1"
  >
    <div
      class="cache-msgflj-Stack-ImageStack e1kdwp5x0"
    >
      <img
        alt=""
        src="test-file-stub"
      />
    </div>
    <div
      class="cache-1i393eq-Stack ehpbis70"
      style="flex: 1;"
    >
      <div
        class="cache-1r8thn3-Stack ehpbis70"
        style="flex: 1;"
      >
        <p
          class="cache-1vmaihr-StyledText e13y3mga0"
        >
          Title
        </p>
        <p
          class="cache-13w04ns-StyledText e13y3mga0"
        >
          Description
        </p>
      </div>
      <div
        class="cache-nf3r0g-Stack ehpbis70"
      >
        <button
          class="cache-1wvru4m-StyledFilledButton e112qvla2"
          type="button"
        >
          Button
        </button>
      </div>
    </div>
    <button
      class="cache-xnjxeq-StyledGhostButton e112qvla0"
      name="close"
      type="button"
    >
      <svg
        class="cache-kbjega-StyledIcon-sizeStyles e5nqbfp0"
        viewBox="0 0 24 24"
      >
        <path
          d="M19,6.41L17.59,5L12,10.59L6.41,5L5,6.41L10.59,12L5,17.59L6.41,19L12,13.41L17.59,19L19,17.59L13.41,12L19,6.41Z"
        />
      </svg>
    </button>
  </div>
</DocumentFragment>
`;

exports[`Banner renders correctly with a link 1`] = `
<DocumentFragment>
  .cache-1voqd75-Container-styles {
  padding: 24px;
  border-radius: 8px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  gap: 16px;
  background: #f1eefc;
  background-image: url(test-file-stub);
  -webkit-background-position: right;
  background-position: right;
  background-repeat: no-repeat;
  -webkit-background-size: contain;
  background-size: contain;
}

.cache-1voqd75-Container-styles>svg:first-child,
.cache-1voqd75-Container-styles>img {
  height: 140px;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

.cache-1voqd75-Container-styles button[name='close'] {
  background: none;
}

.cache-1voqd75-Container-styles button[name='close']:hover {
  background: none;
}

.cache-msgflj-Stack-ImageStack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  width: 140px;
}

.cache-1i393eq-Stack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 16px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.cache-1r8thn3-Stack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 4px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.cache-1vmaihr-StyledText {
  color: #521094;
  font-size: 21px;
  font-family: Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 32px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-13w04ns-StyledText {
  color: #3f4250;
  font-size: 16px;
  font-family: Asap;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 24px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-nf3r0g-Stack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 16px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.cache-iezd3d-StyledLink {
  background-color: transparent;
  border: none;
  padding: 0;
  color: #521094;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-thickness: 1px;
  text-underline-offset: 2px;
  text-decoration-color: transparent;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-transition: text-decoration-color 250ms ease-out;
  transition: text-decoration-color 250ms ease-out;
  gap: 8px;
  position: relative;
  cursor: pointer;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  font-size: 14px;
  font-family: Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 20px;
  paragraph-spacing: 0;
  text-case: none;
}

.cache-iezd3d-StyledLink .e1afnb7a2 {
  -webkit-transition: -webkit-transform 250ms ease-out;
  transition: transform 250ms ease-out;
}

.cache-iezd3d-StyledLink>* {
  pointer-events: none;
}

.cache-iezd3d-StyledLink:hover,
.cache-iezd3d-StyledLink:focus {
  outline: none;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-thickness: 1px;
  color: #521094;
  text-decoration-color: #521094;
}

.cache-iezd3d-StyledLink:hover .e1afnb7a2,
.cache-iezd3d-StyledLink:focus .e1afnb7a2 {
  -webkit-transform: translate(-4px, 0);
  -moz-transform: translate(-4px, 0);
  -ms-transform: translate(-4px, 0);
  transform: translate(-4px, 0);
}

.cache-iezd3d-StyledLink:hover::after,
.cache-iezd3d-StyledLink:focus::after {
  background-color: #521094;
}

.cache-iezd3d-StyledLink:active {
  text-decoration-thickness: 2px;
}

.cache-1tang38-StyledExternalIconContainer {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  padding-bottom: 4px;
}

.cache-1wiavj7-StyledIcon-sizeStyles-StyledIcon {
  vertical-align: middle;
  fill: currentColor;
  height: 14px;
  width: 14px;
  min-width: 14px;
  min-height: 14px;
}

.cache-xnjxeq-StyledGhostButton {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 32px;
  padding: 0 8px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 8px;
  border-radius: 4px;
  box-sizing: border-box;
  width: 32px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline-offset: 2px;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 14px;
  font-family: Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 20px;
  paragraph-spacing: 0;
  text-case: none;
  background: none;
  border: none;
  color: #3f4250;
}

.cache-xnjxeq-StyledGhostButton:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-xnjxeq-StyledGhostButton:active {
  box-shadow: 0px 0px 0px 3px #151A2D5C;
}

.cache-xnjxeq-StyledGhostButton:hover,
.cache-xnjxeq-StyledGhostButton:active {
  background: #e9eaeb;
  color: #222638;
}

.cache-kbjega-StyledIcon-sizeStyles {
  vertical-align: middle;
  fill: currentColor;
  height: 16px;
  width: 16px;
  min-width: 16px;
  min-height: 16px;
}

<div
    class="cache-1voqd75-Container-styles e1kdwp5x1"
  >
    <div
      class="cache-msgflj-Stack-ImageStack e1kdwp5x0"
    >
      <img
        alt=""
        src="test-file-stub"
      />
    </div>
    <div
      class="cache-1i393eq-Stack ehpbis70"
      style="flex: 1;"
    >
      <div
        class="cache-1r8thn3-Stack ehpbis70"
        style="flex: 1;"
      >
        <p
          class="cache-1vmaihr-StyledText e13y3mga0"
        >
          Title
        </p>
        <p
          class="cache-13w04ns-StyledText e13y3mga0"
        >
          Description
        </p>
      </div>
      <div
        class="cache-nf3r0g-Stack ehpbis70"
      >
        <a
          class="cache-iezd3d-StyledLink e1afnb7a0"
          href=""
          prominence="default"
          rel="noopener noreferrer"
          target="_blank"
        >
          Link
          <span
            class="cache-1tang38-StyledExternalIconContainer e1afnb7a1"
          >
            <svg
              class="e1afnb7a2 cache-1wiavj7-StyledIcon-sizeStyles-StyledIcon e5nqbfp0"
              viewBox="0 0 24 24"
            >
              <path
                d="M14,3V5H17.59L7.76,14.83L9.17,16.24L19,6.41V10H21V3M19,19H5V5H12V3H5C3.89,3 3,3.9 3,5V19A2,2 0 0,0 5,21H19A2,2 0 0,0 21,19V12H19V19Z"
              />
            </svg>
          </span>
        </a>
      </div>
    </div>
    <button
      class="cache-xnjxeq-StyledGhostButton e112qvla0"
      name="close"
      type="button"
    >
      <svg
        class="cache-kbjega-StyledIcon-sizeStyles e5nqbfp0"
        viewBox="0 0 24 24"
      >
        <path
          d="M19,6.41L17.59,5L12,10.59L6.41,5L5,6.41L10.59,12L5,17.59L6.41,19L12,13.41L17.59,19L19,17.59L13.41,12L19,6.41Z"
        />
      </svg>
    </button>
  </div>
</DocumentFragment>
`;

exports[`Banner renders correctly with an image 1`] = `
<DocumentFragment>
  .cache-1voqd75-Container-styles {
  padding: 24px;
  border-radius: 8px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  gap: 16px;
  background: #f1eefc;
  background-image: url(test-file-stub);
  -webkit-background-position: right;
  background-position: right;
  background-repeat: no-repeat;
  -webkit-background-size: contain;
  background-size: contain;
}

.cache-1voqd75-Container-styles>svg:first-child,
.cache-1voqd75-Container-styles>img {
  height: 140px;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

.cache-1voqd75-Container-styles button[name='close'] {
  background: none;
}

.cache-1voqd75-Container-styles button[name='close']:hover {
  background: none;
}

.cache-msgflj-Stack-ImageStack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  width: 140px;
}

.cache-1i393eq-Stack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 16px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.cache-1r8thn3-Stack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 4px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.cache-1vmaihr-StyledText {
  color: #521094;
  font-size: 21px;
  font-family: Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 32px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-13w04ns-StyledText {
  color: #3f4250;
  font-size: 16px;
  font-family: Asap;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 24px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-nf3r0g-Stack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 16px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.cache-xnjxeq-StyledGhostButton {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 32px;
  padding: 0 8px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 8px;
  border-radius: 4px;
  box-sizing: border-box;
  width: 32px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline-offset: 2px;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 14px;
  font-family: Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 20px;
  paragraph-spacing: 0;
  text-case: none;
  background: none;
  border: none;
  color: #3f4250;
}

.cache-xnjxeq-StyledGhostButton:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-xnjxeq-StyledGhostButton:active {
  box-shadow: 0px 0px 0px 3px #151A2D5C;
}

.cache-xnjxeq-StyledGhostButton:hover,
.cache-xnjxeq-StyledGhostButton:active {
  background: #e9eaeb;
  color: #222638;
}

.cache-kbjega-StyledIcon-sizeStyles {
  vertical-align: middle;
  fill: currentColor;
  height: 16px;
  width: 16px;
  min-width: 16px;
  min-height: 16px;
}

<div
    class="cache-1voqd75-Container-styles e1kdwp5x1"
  >
    <div
      class="cache-msgflj-Stack-ImageStack e1kdwp5x0"
    >
      <img
        alt=""
        src="test-file-stub"
      />
    </div>
    <div
      class="cache-1i393eq-Stack ehpbis70"
      style="flex: 1;"
    >
      <div
        class="cache-1r8thn3-Stack ehpbis70"
        style="flex: 1;"
      >
        <p
          class="cache-1vmaihr-StyledText e13y3mga0"
        >
          Title
        </p>
        <p
          class="cache-13w04ns-StyledText e13y3mga0"
        >
          Description
        </p>
      </div>
      <div
        class="cache-nf3r0g-Stack ehpbis70"
      />
    </div>
    <button
      class="cache-xnjxeq-StyledGhostButton e112qvla0"
      name="close"
      type="button"
    >
      <svg
        class="cache-kbjega-StyledIcon-sizeStyles e5nqbfp0"
        viewBox="0 0 24 24"
      >
        <path
          d="M19,6.41L17.59,5L12,10.59L6.41,5L5,6.41L10.59,12L5,17.59L6.41,19L12,13.41L17.59,19L19,17.59L13.41,12L19,6.41Z"
        />
      </svg>
    </button>
  </div>
</DocumentFragment>
`;

exports[`Banner renders correctly with default values 1`] = `
<DocumentFragment>
  .cache-1voqd75-Container-styles {
  padding: 24px;
  border-radius: 8px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  gap: 16px;
  background: #f1eefc;
  background-image: url(test-file-stub);
  -webkit-background-position: right;
  background-position: right;
  background-repeat: no-repeat;
  -webkit-background-size: contain;
  background-size: contain;
}

.cache-1voqd75-Container-styles>svg:first-child,
.cache-1voqd75-Container-styles>img {
  height: 140px;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

.cache-1voqd75-Container-styles button[name='close'] {
  background: none;
}

.cache-1voqd75-Container-styles button[name='close']:hover {
  background: none;
}

.cache-msgflj-Stack-ImageStack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  width: 140px;
}

.cache-1i393eq-Stack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 16px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.cache-1r8thn3-Stack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 4px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.cache-1vmaihr-StyledText {
  color: #521094;
  font-size: 21px;
  font-family: Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 32px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-13w04ns-StyledText {
  color: #3f4250;
  font-size: 16px;
  font-family: Asap;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 24px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-nf3r0g-Stack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 16px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.cache-xnjxeq-StyledGhostButton {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 32px;
  padding: 0 8px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 8px;
  border-radius: 4px;
  box-sizing: border-box;
  width: 32px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline-offset: 2px;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 14px;
  font-family: Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 20px;
  paragraph-spacing: 0;
  text-case: none;
  background: none;
  border: none;
  color: #3f4250;
}

.cache-xnjxeq-StyledGhostButton:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-xnjxeq-StyledGhostButton:active {
  box-shadow: 0px 0px 0px 3px #151A2D5C;
}

.cache-xnjxeq-StyledGhostButton:hover,
.cache-xnjxeq-StyledGhostButton:active {
  background: #e9eaeb;
  color: #222638;
}

.cache-kbjega-StyledIcon-sizeStyles {
  vertical-align: middle;
  fill: currentColor;
  height: 16px;
  width: 16px;
  min-width: 16px;
  min-height: 16px;
}

<div
    class="cache-1voqd75-Container-styles e1kdwp5x1"
  >
    <div
      class="cache-msgflj-Stack-ImageStack e1kdwp5x0"
    >
      <img
        alt=""
        src="test-file-stub"
      />
    </div>
    <div
      class="cache-1i393eq-Stack ehpbis70"
      style="flex: 1;"
    >
      <div
        class="cache-1r8thn3-Stack ehpbis70"
        style="flex: 1;"
      >
        <p
          class="cache-1vmaihr-StyledText e13y3mga0"
        >
          Title
        </p>
        <p
          class="cache-13w04ns-StyledText e13y3mga0"
        >
          Description
        </p>
      </div>
      <div
        class="cache-nf3r0g-Stack ehpbis70"
      />
    </div>
    <button
      class="cache-xnjxeq-StyledGhostButton e112qvla0"
      name="close"
      type="button"
    >
      <svg
        class="cache-kbjega-StyledIcon-sizeStyles e5nqbfp0"
        viewBox="0 0 24 24"
      >
        <path
          d="M19,6.41L17.59,5L12,10.59L6.41,5L5,6.41L10.59,12L5,17.59L6.41,19L12,13.41L17.59,19L19,17.59L13.41,12L19,6.41Z"
        />
      </svg>
    </button>
  </div>
</DocumentFragment>
`;

exports[`Banner renders correctly with direction row 1`] = `
<DocumentFragment>
  .cache-1voqd75-Container-styles {
  padding: 24px;
  border-radius: 8px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  gap: 16px;
  background: #f1eefc;
  background-image: url(test-file-stub);
  -webkit-background-position: right;
  background-position: right;
  background-repeat: no-repeat;
  -webkit-background-size: contain;
  background-size: contain;
}

.cache-1voqd75-Container-styles>svg:first-child,
.cache-1voqd75-Container-styles>img {
  height: 140px;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

.cache-1voqd75-Container-styles button[name='close'] {
  background: none;
}

.cache-1voqd75-Container-styles button[name='close']:hover {
  background: none;
}

.cache-msgflj-Stack-ImageStack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  width: 140px;
}

.cache-142nvv6-Stack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 16px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.cache-1r8thn3-Stack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 4px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.cache-1vmaihr-StyledText {
  color: #521094;
  font-size: 21px;
  font-family: Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 32px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-13w04ns-StyledText {
  color: #3f4250;
  font-size: 16px;
  font-family: Asap;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 24px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-nf3r0g-Stack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 16px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.cache-xnjxeq-StyledGhostButton {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 32px;
  padding: 0 8px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 8px;
  border-radius: 4px;
  box-sizing: border-box;
  width: 32px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline-offset: 2px;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 14px;
  font-family: Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 20px;
  paragraph-spacing: 0;
  text-case: none;
  background: none;
  border: none;
  color: #3f4250;
}

.cache-xnjxeq-StyledGhostButton:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-xnjxeq-StyledGhostButton:active {
  box-shadow: 0px 0px 0px 3px #151A2D5C;
}

.cache-xnjxeq-StyledGhostButton:hover,
.cache-xnjxeq-StyledGhostButton:active {
  background: #e9eaeb;
  color: #222638;
}

.cache-kbjega-StyledIcon-sizeStyles {
  vertical-align: middle;
  fill: currentColor;
  height: 16px;
  width: 16px;
  min-width: 16px;
  min-height: 16px;
}

<div
    class="cache-1voqd75-Container-styles e1kdwp5x1"
  >
    <div
      class="cache-msgflj-Stack-ImageStack e1kdwp5x0"
    >
      <img
        alt=""
        src="test-file-stub"
      />
    </div>
    <div
      class="cache-142nvv6-Stack ehpbis70"
      style="flex: 1;"
    >
      <div
        class="cache-1r8thn3-Stack ehpbis70"
        style="flex: 1;"
      >
        <p
          class="cache-1vmaihr-StyledText e13y3mga0"
        >
          Title
        </p>
        <p
          class="cache-13w04ns-StyledText e13y3mga0"
        >
          Description
        </p>
      </div>
      <div
        class="cache-nf3r0g-Stack ehpbis70"
      />
    </div>
    <button
      class="cache-xnjxeq-StyledGhostButton e112qvla0"
      name="close"
      type="button"
    >
      <svg
        class="cache-kbjega-StyledIcon-sizeStyles e5nqbfp0"
        viewBox="0 0 24 24"
      >
        <path
          d="M19,6.41L17.59,5L12,10.59L6.41,5L5,6.41L10.59,12L5,17.59L6.41,19L12,13.41L17.59,19L19,17.59L13.41,12L19,6.41Z"
        />
      </svg>
    </button>
  </div>
</DocumentFragment>
`;

exports[`Banner renders correctly with size small 1`] = `
<DocumentFragment>
  .cache-mkpxbw-Container-styles {
  padding: 16px;
  border-radius: 8px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  gap: 16px;
  background: #f1eefc;
  background-image: url(test-file-stub),url(test-file-stub);
  -webkit-background-position: left,right;
  background-position: left,right;
  background-repeat: no-repeat,no-repeat;
  -webkit-background-size: contain,contain;
  background-size: contain,contain;
}

.cache-mkpxbw-Container-styles>svg:first-child,
.cache-mkpxbw-Container-styles>img {
  height: 100px;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

.cache-mkpxbw-Container-styles button[name='close'] {
  background: none;
}

.cache-mkpxbw-Container-styles button[name='close']:hover {
  background: none;
}

.cache-1ppo6xt-Stack-ImageStack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  width: 74px;
}

.cache-1i393eq-Stack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 16px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.cache-1r8thn3-Stack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 4px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.cache-u0q5i7-StyledText {
  color: #521094;
  font-size: 16px;
  font-family: Asap;
  font-weight: 600;
  letter-spacing: 0;
  line-height: 24px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-13w04ns-StyledText {
  color: #3f4250;
  font-size: 16px;
  font-family: Asap;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 24px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-nf3r0g-Stack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 16px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.cache-xnjxeq-StyledGhostButton {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 32px;
  padding: 0 8px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 8px;
  border-radius: 4px;
  box-sizing: border-box;
  width: 32px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline-offset: 2px;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 14px;
  font-family: Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 20px;
  paragraph-spacing: 0;
  text-case: none;
  background: none;
  border: none;
  color: #3f4250;
}

.cache-xnjxeq-StyledGhostButton:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-xnjxeq-StyledGhostButton:active {
  box-shadow: 0px 0px 0px 3px #151A2D5C;
}

.cache-xnjxeq-StyledGhostButton:hover,
.cache-xnjxeq-StyledGhostButton:active {
  background: #e9eaeb;
  color: #222638;
}

.cache-kbjega-StyledIcon-sizeStyles {
  vertical-align: middle;
  fill: currentColor;
  height: 16px;
  width: 16px;
  min-width: 16px;
  min-height: 16px;
}

<div
    class="cache-mkpxbw-Container-styles e1kdwp5x1"
  >
    <div
      class="cache-1ppo6xt-Stack-ImageStack e1kdwp5x0"
    >
      <img
        alt=""
        src="test-file-stub"
      />
    </div>
    <div
      class="cache-1i393eq-Stack ehpbis70"
      style="flex: 1;"
    >
      <div
        class="cache-1r8thn3-Stack ehpbis70"
        style="flex: 1;"
      >
        <p
          class="cache-u0q5i7-StyledText e13y3mga0"
        >
          Title
        </p>
        <p
          class="cache-13w04ns-StyledText e13y3mga0"
        >
          Description
        </p>
      </div>
      <div
        class="cache-nf3r0g-Stack ehpbis70"
      />
    </div>
    <button
      class="cache-xnjxeq-StyledGhostButton e112qvla0"
      name="close"
      type="button"
    >
      <svg
        class="cache-kbjega-StyledIcon-sizeStyles e5nqbfp0"
        viewBox="0 0 24 24"
      >
        <path
          d="M19,6.41L17.59,5L12,10.59L6.41,5L5,6.41L10.59,12L5,17.59L6.41,19L12,13.41L17.59,19L19,17.59L13.41,12L19,6.41Z"
        />
      </svg>
    </button>
  </div>
</DocumentFragment>
`;

exports[`Banner renders correctly with type promotional 1`] = `
<DocumentFragment>
  .cache-1iq2gtr-Container-styles {
  padding: 24px;
  border-radius: 8px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  gap: 16px;
  background-image: url(test-file-stub),linear-gradient(180deg, #c43bff 0%, #521094 88.87%);
  -webkit-background-position: right;
  background-position: right;
  background-repeat: no-repeat;
  -webkit-background-size: contain;
  background-size: contain;
}

.cache-1iq2gtr-Container-styles>svg:first-child,
.cache-1iq2gtr-Container-styles>img {
  height: 140px;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

.cache-1iq2gtr-Container-styles button[name='close'] {
  background: none;
}

.cache-1iq2gtr-Container-styles button[name='close']:hover {
  background: none;
}

.cache-msgflj-Stack-ImageStack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  width: 140px;
}

.cache-1i393eq-Stack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 16px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.cache-1r8thn3-Stack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 4px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.cache-py9amj-StyledText {
  color: #ffffff;
  font-size: 21px;
  font-family: Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 32px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-1n7nno8-StyledText {
  color: #ffffff;
  font-size: 16px;
  font-family: Asap;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 24px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-nf3r0g-Stack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 16px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.cache-r3pnhk-StyledFilledButton {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 32px;
  padding: 0 8px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 8px;
  border-radius: 4px;
  box-sizing: border-box;
  width: 32px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline-offset: 2px;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 14px;
  font-family: Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 20px;
  paragraph-spacing: 0;
  text-case: none;
  background: #521094;
  border: none;
  color: #ffffff;
}

.cache-r3pnhk-StyledFilledButton:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-r3pnhk-StyledFilledButton:active {
  box-shadow: 0px 0px 0px 3px #5e127e40;
}

.cache-r3pnhk-StyledFilledButton:hover,
.cache-r3pnhk-StyledFilledButton:active {
  background: #3b1a61;
  color: #f9f9fa;
}

.cache-kbjega-StyledIcon-sizeStyles {
  vertical-align: middle;
  fill: currentColor;
  height: 16px;
  width: 16px;
  min-width: 16px;
  min-height: 16px;
}

<div
    class="cache-1iq2gtr-Container-styles e1kdwp5x1"
  >
    <div
      class="cache-msgflj-Stack-ImageStack e1kdwp5x0"
    >
      <img
        alt=""
        src="test-file-stub"
      />
    </div>
    <div
      class="cache-1i393eq-Stack ehpbis70"
      style="flex: 1;"
    >
      <div
        class="cache-1r8thn3-Stack ehpbis70"
        style="flex: 1;"
      >
        <p
          class="cache-py9amj-StyledText e13y3mga0"
        >
          Title
        </p>
        <p
          class="cache-1n7nno8-StyledText e13y3mga0"
        >
          Description
        </p>
      </div>
      <div
        class="cache-nf3r0g-Stack ehpbis70"
      />
    </div>
    <button
      class="cache-r3pnhk-StyledFilledButton e112qvla2"
      name="close"
      type="button"
    >
      <svg
        class="cache-kbjega-StyledIcon-sizeStyles e5nqbfp0"
        viewBox="0 0 24 24"
      >
        <path
          d="M19,6.41L17.59,5L12,10.59L6.41,5L5,6.41L10.59,12L5,17.59L6.41,19L12,13.41L17.59,19L19,17.59L13.41,12L19,6.41Z"
        />
      </svg>
    </button>
  </div>
</DocumentFragment>
`;
